tests/snapshots/scenarios__navigation.snap
---
source: tests/scenarios.rs
expression: snapshot
---
/work/docs                                                                      
  ..                                 <UP> ----- --:--                           
  note.txt                             7B ----- --:--                           
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
..  0B UP                                          │ F 1  D 0  S 0/0B  8.0K Free
F1 Help       F2 Ren        F3 View      F4 Edit      F5 Copy      F6 Move      
F7 Dir        F8 Del        F9 Shell     F10 MCD      F11 QCD      F12 Menu
