tests/snapshots/scenarios__selection.snap
---
source: tests/scenarios.rs
expression: snapshot
---
/work                                                                           
  ..                                 <UP> ----- --:--                           
  a.txt                               11B ----- --:--                           
  b.txt                               22B ----- --:--                           
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
a.txt  11B FILE                                  │ F 2  D 0  S 1/11B  12.0K Free
F1 Help       F2 Ren        F3 View      F4 Edit      F5 Copy      F6 Move      
F7 Dir        F8 Del        F9 ---       F10 MCD      F11 QCD      F12 Menu
