tests/snapshots/scenarios__startup.snap
---
source: tests/scenarios.rs
expression: snapshot
---
/work                                                                           
  ..                                 <UP> ----- --:--                           
  docs                              <DIR> ----- --:--                           
  readme.txt                         1.0K ----- --:--                           
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
..  0B UP                                          │ F 1  D 1  S 0/0B  4.0K Free
F1 Help       F2 Ren        F3 View      F4 Edit      F5 Copy      F6 Move      
F7 Dir        F8 Del        F9 Shell     F10 MCD      F11 QCD      F12 Menu
